<resources>
    <string name="app_name">UmBuy</string>
    <string name="username">Name: %1$s</string>
    <string name="useremail">Email: %1$s</string>
    <string name="userCountry">Country: %1$s</string>
    <string name="edit_hint">Add the country…</string>>
    <string name="login">Log In</string>
    <string name="logout">LogOut</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="phone">phone</string>
    <string name="com_auth0_lock_header_title">Umbuy</string>
    <string name="com_auth0_client_id">awHhrmeJ625lGGKkdC6vkNIZ6ulpiEOP</string>
    <string name="com_auth0_domain">team6.auth0.com</string>
    <string name="create_ad_button">Create an Advertisement</string>
    <string name="create_ad_upload">Upload</string>
    <string name="create_ad_title">Title*</string>
    <string name="create_ad_price">Price*</string>
    <string name="create_ad_category">Category</string>
    <string name="create_ad_description">Description</string>
    <string name="create_ad_submit">Submit Advertisement</string>
    <string name="title_activity_navigation_bar">NavigationBar</string>
    <string name="delete_ad_dialog">Are you sure you want to delete this advertisement?</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
